css/index.css
/* Colors */
:root {
  --lightgray: #f5f5f5;
  --gray: #c0c0c0;
  --darkgray: #333;
  --navy: #17050f;
  --blue: #73aedb;
  --white: #fff;
  --pink: hsl(327, 80%, 41%);
  --lightblue: hsl(220, 44%, 50%);
  --primary-blue: hsl(225, 64%, 50%)
}

/* Global stylesheet */
* {
  box-sizing: border-box;
}

html,
body {
  font-family: -apple-system, system-ui, sans-serif;
  color: var(--darkgray);
  background-color: var(--lightgray);
}

a[href] {
  color: var(--navy);
}

.wrapper {
  --breathing-room: 16px;
  display: grid;
  grid-template-columns:
      1fr
      min(60ch, 100%)
      1fr;
  padding-left: var(--breathing-room);
  padding-right: var(--breathing-room);
  min-height: 100vh;
  grid-template-rows: auto 1fr auto;
}
.wrapper > * {
  grid-column: 2;
}

.card-grid {
  --min-column-width: min(320px, 100%);
  display: grid;
  grid-template-columns:
      repeat(auto-fill, minmax(var(--min-column-width), 1fr));
  gap: 16px;
  padding: 16px;
}

header {
  text-align: center;

  /*apply once mobile layout is set*/
  /*display: flex;*/
  /*align-items: baseline;*/
}

.section-header {
  font-family: 'Sriracha', latin;
  color: var(--pink);
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

pre {
  padding: 2rem;
}

/* Header */
h1 {
  font-family: 'Sriracha', latin;
}
h1 :link {
  text-decoration: none;
}

footer {
  text-align: center;
  margin-bottom: 1rem;
  font-size: .75rem;
}

/* Nav */
.nav {
  list-style: none;
  font-family: 'Sriracha', latin;
  text-align: center;
}
.nav-item {
  display: inline-block;
  margin-right: 1em;
  font-weight: 500;
}
.nav-item a[href]:not(:hover) {
  text-decoration: none;
}
.nav-item a[href]:hover {
  color: var(--primary-blue);
}
.nav-item-active {
  font-weight: 900;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  counter-increment: start-from -1;
  line-height: 1.8;
}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--darkgray);
}
.postlist-date {
  word-spacing: -0.5px;
}
.postlist-link {
  padding-left: 0.25em;
  padding-right: 0.25em;
  text-decoration: none;
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}

a[href].postlist-link:hover,
a[href].postlist-linkfocus {
  color: var(--primary-blue);
  text-decoration: underline;
  text-underline-position: from-font;
  text-underline-offset: 10%;
  text-decoration-thickness: 1px;
}

.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
}

/* Tags */
.post-tag {
  text-decoration: none;
  background: transparent;
  display: inline-flex;
}

.post-tag:hover .post-tag-contents,
.post-tag:focus .post-tag-contents {
  background-color: var(--primary-blue);
  color: var(--white);
  transform: translateY(-5px);
  text-decoration: none;
}

.post-tag-contents {
  font-weight: 700;
  font-size: 0.8em;
  padding: 0.4em 0.5em;
  margin-left: .5rem;
  margin-top: .5rem;
  border: 2px solid var(--primary-blue);
  border-radius: 0.7em;
  line-height: 1;
  transition: transform 250ms;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: 0.1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

@keyframes grow-and-shrink {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.4);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes color-in-and-out {
  0% {
    color: unset;
  }
  50% {
    color: var(--pink);
  }
  100% {
    color: unset;
  }
}


.social-link-container {
  margin-top: 20px;
  display: flex;
}

.social-link-child {
  display: flex;
  align-items: baseline;
  margin-left: 20px;
}

.social-link {
  align-content: center;
}

.social-link:hover .social-link-img,
.social-link:focus .social-link-img {
  transform: scale(1.3);
}

a[href].social-link,
a[href].social-link {
  text-decoration: none;
}

a[href].social-link:hover,
a[href].social-link:focus {
  color: var(--primary-blue);
  transition: color 300ms;
}


.social-link-img {
  width: 30px;
  transition: transform 300ms;
}

